--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.39MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-438.6KB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.74MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.40MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇧🇷 巴西-334.9KB/s(Youtube:不良林), server: 138.118.175.28, port: 31320, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.44MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-11.12MB/s(Youtube:不良林), server: 103.56.60.235, port: 3382, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.82MB/s(Youtube:不良林), server: 103.56.60.235, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.11MB/s(Youtube:不良林), server: 103.56.60.235, port: 3382, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.18MB/s(Youtube:不良林), server: 103.56.60.235, port: 3382, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.44MB/s(Youtube:不良林), server: 120.233.186.71, port: 3382, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.04MB/s(Youtube:不良林), server: 120.233.186.71, port: 3382, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.21MB/s(Youtube:不良林), server: 152.89.210.105, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.60MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc6.98848.xyz, port: 31961, type: vmess, uuid: 94311e71-9125-4bd1-faa2-515a8667c486, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /youtubt@白嫖王者, ws-headers: {Host: bai-piao-wang-zhe-iplc6.98848.xyz}}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.40MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.40MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.40MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.40MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.40MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.40MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.40MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
