--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.19MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.33MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.97MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.36MB/s(Youtube:不良林), server: 120.233.186.250, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc6.98848.xyz, port: 31961, type: vmess, uuid: 94311e71-9125-4bd1-faa2-515a8667c486, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /youtubt@白嫖王者, ws-headers: {Host: bai-piao-wang-zhe-iplc6.98848.xyz}}
-  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.50MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇸🇬 新加坡-2.00MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.55MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.21MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-903.0KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇨🇳 中国-381.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-903.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-903.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-903.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-903.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-903.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-903.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-903.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
