--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.20MB/s(Youtube:不良林), server: 120.233.186.204, port: 3382, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.85MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-260.0KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.31MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.82MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.20MB/s(Youtube:不良林) 2, server: 120.233.186.204, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-7.75MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.13MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.31MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-294.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇺🇸 美国-441.0KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.20MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇨🇳 中国-8.35MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-260.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-260.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-260.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-260.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-260.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-260.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-260.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-441.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
